--- a/layout/includes/mixins/posts/avatar.pug
+++ b/layout/includes/mixins/posts/avatar.pug
@@ -1,2 +1,1 @@
-a(href=url_for()) 
-  img(src=url_for('assets/imgs/avatar.png'), alt="")
+img(src=url_for('assets/imgs/avatar.png'), alt="" class="yu13_img_rotate")
