--- a/source/style/_global/header.css
+++ b/source/style/_global/header.css
@@ -398,6 +398,7 @@
   background-position: center center;
   background-size: cover;
   background-repeat: repeat;
+  background-image: url('/assets/imgs/top_bg.jpg');
 }
 
 .article_topbg:before {
