--- a/layout/includes/footer.pug
+++ b/layout/includes/footer.pug
@@ -8,3 +8,7 @@ footer
           = '© 2022'
           a(href="/")='十三博客'
           = '鲁ICP备2022003990号'
+script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js") 
+script(src=url_for('https://api.top15.cn/static/script/jquery.prettify.js')) 
+script(src=url_for('/assets/lib/fancybox/fancybox.js')) 
+script(src=url_for('/assets/js/app.js')) 
