--- a/layout/includes/mixins/posts.pug
+++ b/layout/includes/mixins/posts.pug
@@ -21,4 +21,4 @@
                   = config.author
                 .time
                   i.yufont.icon-shijian
-                  span= '2022-06-24'
+                  span= date(value.updated, 'YYYY-DD-MM')
