--- a/source/style/index.styl
+++ b/source/style/index.styl
@@ -5,5 +5,6 @@
 @import '_global/index.css';
 @import '_global/article.css';
 @import '_global/sidebar.css';
+@import '_global/sort.css';
 @import '_global/footer.css';
 @import '_global/media.css';
