--- a/layout/index.pug
+++ b/layout/index.pug
@@ -1,6 +1,9 @@
 extends includes/layout.pug
 block content
-  != partial('./includes/mixins/posts', { posts: page.posts }, {cache: true})
+  .home_title
+    .title= theme.blog_title
+    .info= theme.blog_des
+  != partial('./includes/mixins/posts', { posts: page.posts }, {cache: false })
   div.page_container
     .lists_nav
-      != paginator({ prev_text: '<',next_text: '>' })
+      != paginator({ prev_text: '<i class="fa fa-angle-left"></i>',next_text: '<i class="fa fa-angle-right"></i>', escape: false })
