--- a/source/style/_global/index.css
+++ b/source/style/_global/index.css
@@ -145,7 +145,8 @@
   color: #fff;
 }
 
-.page_container .lists_nav .page-number {
+.page_container .lists_nav .page-number,
+.page_container .lists_nav .extend {
   background: #fff;
   display: inline-block;
   padding: 7px 15px;
