--- a/layout/includes/header/index.pug
+++ b/layout/includes/header/index.pug
@@ -6,7 +6,7 @@ header#header(class='header yu13_p_30')
     #search(class='header_search yu13_cursor yu13_hover')
       i.yufont.icon-sousuo
     .line.yu13_p_10
-    #mobile_menu(class='mobile_menu yu13_cursor yu13_hover')
-        i.yufont.icon-caidan
+    //- #mobile_menu(class='mobile_menu yu13_cursor yu13_hover')
+    //-     i.yufont.icon-caidan
     !=partial('includes/header/nav', {}, {cache: true})
     
