--- a/layout/includes/sidebar/tags.pug
+++ b/layout/includes/sidebar/tags.pug
@@ -1,6 +1,6 @@
 .sidebar_tags.sidebar_container
   h3.sidebar_title
-    i.yufont.icon-24gl-folderOpen
+    i.yufont.icon-tag
     = '标签'
 
   != tagcloud(site.tags,{min_font: 16})
