--- a/layout/includes/sidebar/catalogue.pug
+++ b/layout/includes/sidebar/catalogue.pug
@@ -1,5 +1,5 @@
 .catalogue.sidebar_container
   h3.sidebar_title
-    i.yufont.icon-24gl-folderOpen
+    i.yufont.icon-feiji
     = '目录'
   != toc(page.content)
