--- a/layout/includes/home/homebg.pug
+++ b/layout/includes/home/homebg.pug
@@ -14,4 +14,4 @@
           i.yufont.icon-gitee-fill-round
           = 'Gitee'
     .right_icon
-     img(src=url_for('/img/index.svg'), alt="首页")
+     img(src=url_for('/assets/imgs/index.svg'), alt="首页")
