--- a/layout/includes/mixins/posts.pug
+++ b/layout/includes/mixins/posts.pug
@@ -17,7 +17,7 @@
               .article_bottom
                .article_author
                 include ./posts/avatar
-                = config.author
+                include ./posts/author
                .time
                  i.yufont.icon-shijian
                  span= date(value.updated, 'YYYY-DD-MM')
