--- a/layout/includes/header/head.pug
+++ b/layout/includes/header/head.pug
@@ -17,6 +17,8 @@ meta(charset='UTF-8')
 meta(http-equiv="X-UA-Compatible" content="IE=edge")
 meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no")
 
+link(rel="shortcut icon", href=url_for("/assets/imgs/favicon.ico"), type="image/x-icon")
+
 title= tabTitle
 if pageKeywords
   meta(name="keywords" content=pageKeywords)
