--- a/source/style/_global/main.css
+++ b/source/style/_global/main.css
@@ -255,9 +255,20 @@ h6 {
 @keyframes fade-in {
   0% {
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(-100px);
   }
 
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
   100% {
     opacity: 1;
     transform: translateY(0);
