文章上下翻页

--- a/layout/post.pug
+++ b/layout/post.pug
@@ -22,4 +22,6 @@ block content
           p
            = '最后编辑时间: '
            = date(page.update,  'YYYY-MM-DD')
+        .page_turning
+          != thurning(page.next,page.prev)
     != partial('./includes/sidebar/sidebar',{page: page}, { cache: false  })
