--- a/layout/includes/sidebar/sort.pug
+++ b/layout/includes/sidebar/sort.pug
@@ -3,7 +3,7 @@
     i.yufont.icon-24gl-folderOpen
     = '分类'
   .archive_lists
-    .category-list
+    ul.category-list
       if site.categories.length
         each value, index  in site.categories.data 
           li
