--- a/layout/includes/home/homebg.pug
+++ b/layout/includes/home/homebg.pug
@@ -9,9 +9,9 @@
       .goto_btn
         .yu13_btn
           i.yufont.icon-github-fill
-          = 'GitHub'
+          a(href=theme.github_url)= 'GitHub'
         .yu13_btn
           i.yufont.icon-gitee-fill-round
-          = 'Gitee'
+          a(href=theme.github_url)= 'Gitee'
     .right_icon
      img(src=url_for('/assets/imgs/index.svg'), alt="首页")
