--- a/source/style/_global/article.css
+++ b/source/style/_global/article.css
@@ -190,149 +190,6 @@ blockquote {
   height: auto;
 }
 
-
-.content_text pre {
-  word-break: break-word;
-  overflow-x: auto;
-}
-
-pre.prettyprint {
-  display: block;
-  background-color: #333;
-  padding: 10px;
-  border-radius: 5px;
-  margin: 5px 0
-}
-
-pre .nocode {
-  background-color: none;
-  color: #000
-}
-
-pre .str {
-  color: #ffa0a0
-}
-
-pre .kwd {
-  color: #f0e68c;
-  font-weight: bold
-}
-
-pre .com {
-  color: #87ceeb
-}
-
-pre .typ {
-  color: #98fb98
-}
-
-pre .lit {
-  color: #cd5c5c
-}
-
-pre .pun {
-  color: #fff
-}
-
-pre .pln {
-  color: #fff
-}
-
-pre .tag {
-  color: #f0e68c;
-  font-weight: bold
-}
-
-pre .atn {
-  color: #bdb76b;
-  font-weight: bold
-}
-
-pre .atv {
-  color: #ffa0a0
-}
-
-pre .dec {
-  color: #98fb98
-}
-
-ol.linenums {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #aeaeae
-}
-
-li.L0,
-li.L1,
-li.L2,
-li.L3,
-li.L5,
-li.L6,
-li.L7,
-li.L8 {
-  list-style-type: decimal
-}
-
-@media print {
-  pre.prettyprint {
-    background-color: none
-  }
-
-  pre .str,
-  code .str {
-    color: #060
-  }
-
-  pre .kwd,
-  code .kwd {
-    color: #006;
-    font-weight: bold
-  }
-
-  pre .com,
-  code .com {
-    color: #600;
-    font-style: italic
-  }
-
-  pre .typ,
-  code .typ {
-    color: #404;
-    font-weight: bold
-  }
-
-  pre .lit,
-  code .lit {
-    color: #044
-  }
-
-  pre .pun,
-  code .pun {
-    color: #440
-  }
-
-  pre .pln,
-  code .pln {
-    color: #000
-  }
-
-  pre .tag,
-  code .tag {
-    color: #006;
-    font-weight: bold
-  }
-
-  pre .atn,
-  code .atn {
-    color: #404
-  }
-
-  pre .atv,
-  code .atv {
-    color: #060
-  }
-}
-
 ol.linenums {
   margin-top: 0;
   margin-bottom: 0;
@@ -491,14 +348,28 @@ ol.linenums {
   margin: 0 !important;
 }
 
-/* 为了适配官方 代码高亮 */
-/* TODO 兼容的不是很好 建议 不使用官网的 */
-table {
+
+.content_text table {
+  display: block;
   width: 100%;
+  width: max-content;
+  max-width: 100%;
+  overflow: auto;
   border-collapse: collapse;
 }
+.content_text table th, .content_text table td {
+  border: 1px solid #ededed;
+  padding: 6px 13px;
+}
+.content_text table code {
+  background-color: #f7f7f9;
+  padding: 0.2em, 0.4em;
+  color: var(--hover_color);
 
+}
 
+/* 为了适配官方 代码高亮 */
+/* TODO 兼容的不是很好 建议 不使用官网的 */
 .highlight td{
   display: table-cell !important;
 }
